# bbclaw

./: .gitignore  README.md  bb.bat  bb.ps1  pyproject.toml
bbclaud/: __init__.py  identity.py  main.py
bbclaud/agents/: __init__.py  agents.py
bbclaud/api/: server.py
bbclaud/core/: agent.py  message_bus.py  orchestrator.py  planner.py
bbclaud/memory/: __init__.py  db.py  vectors.py
bbclaud/providers/: anthropic.py  codex_oauth.py  openai_api.py
bbclaud/skills/: loader.py
bbclaud/tools/: __init__.py  filesystem.py  registry.py  self_improve.py  terminal.py
bbclaw/: __init__.py  main.py
bbclaw/agents/: agents.py
bbclaw/api/: __init__.py  server.py
bbclaw/core/: __init__.py  agent.py  autonomous_loop.py  error_collector.py  improvement_loop.py  orchestrator.py  planner.py  scheduler.py  task_queue.py
bbclaw/memory/: context.py  db.py  vectors.py
bbclaw/providers/: __init__.py  base.py  codex_oauth.py
bbclaw/skills/: __init__.py  loader.py
bbclaw/tools/: __init__.py  artifacts.py  filesystem.py  projects.py  registry.py  scheduling.py  self_improve.py  terminal.py
config/: default.toml
dashboard/: package-lock.json  package.json
dashboard/src/: App.tsx  index.css  types.ts
dashboard/src/components/: AgentAvatar.tsx  AnimatedNumber.tsx  BusinessOverviewPanel.tsx  ChatInput.tsx  ConnectionLines.tsx  ObjectiveDagPanel.tsx  Orb.tsx  ProgressBar.tsx  SpotlightCard.tsx
tests/: test_phase1.py  test_phase2.py  test_registry_recurrence.py
